src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>EmailtoCRRManager__c</fullName>
        <inlineHelpText>Indicate date and time when email was sent to CRR Manager.  This communication will provide the details from the Case Manager and CM Supervisor.</inlineHelpText>
        <label>Email to CRR Manager</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmployeeAttorneyattimeofreferral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Attorney at time of referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Address__c</fullName>
        <description>Employee Address</description>
        <label>Employee Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Attorney_cc_Case_Reports__c</fullName>
        <label>Employee Attorney - cc: Case Reports?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Case_Trakker__c</fullName>
        <label>Employee (Case Trakker)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_City__c</fullName>
        <description>Employee City</description>
        <label>Employee City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Gender__c</fullName>
        <description>Employee Gender</description>
        <label>Employee Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Phone__c</fullName>
        <description>Employee Phone</description>
        <label>Employee Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_State__c</fullName>
        <description>Employee State</description>
        <label>Employee State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Zip__c</fullName>
        <description>Employee Zip</description>
        <label>Employee Zip</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee</description>
        <label>Employee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Open Files (Cases)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Employer Contact)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Account_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employer Account Record</description>
        <label>Employer Account Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Employer Account Record)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <description>Employer Address</description>
        <label>Employer Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <description>Employer City</description>
        <label>Employer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Authorized__c</fullName>
        <inlineHelpText>Does NCM have authorization to contact the Employer?</inlineHelpText>
        <label>Employer Contact Authorized?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_State__c</fullName>
        <description>Employer State</description>
        <label>Employer State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Zip__c</fullName>
        <description>Employer Zip</description>
        <label>Employer Zip</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Employer</description>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enclosures__c</fullName>
        <description>Enclosures</description>
        <label>Enclosures</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Result__c</fullName>
        <label>End Result</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CM acted appropriately</fullName>
                </value>
                <value>
                    <fullName>No invoice adjustment</fullName>
                </value>
                <value>
                    <fullName>Billing was appropriate</fullName>
                </value>
                <value>
                    <fullName>Report revised</fullName>
                </value>
                <value>
                    <fullName>Case to remain with current CM</fullName>
                </value>
                <value>
                    <fullName>Issue resolved - customer satisfied</fullName>
                </value>
                <value>
                    <fullName>Issue resolved - customer not satisfied</fullName>
                </value>
                <value>
                    <fullName>Case transfer</fullName>
                </value>
                <value>
                    <fullName>Case closure</fullName>
                </value>
                <value>
                    <fullName>Invoice Discount</fullName>
                </value>
                <value>
                    <fullName>Add CM to DNR List for this customer</fullName>
                </value>
                <value>
                    <fullName>Supervisor counseling</fullName>
                </value>
                <value>
                    <fullName>Warning issued / HR involvement</fullName>
                </value>
                <value>
                    <fullName>Comments emailed to HR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ergonomic_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ergonomic Evaluation</description>
        <label>Ergonomic Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <inlineHelpText>select error type</inlineHelpText>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>approved incomplete report</fullName>
                </value>
                <value>
                    <fullName>customer guidelines not followed</fullName>
                </value>
                <value>
                    <fullName>invoice and//or report sent to wrong customer</fullName>
                </value>
                <value>
                    <fullName>missed Saturday visit</fullName>
                </value>
                <value>
                    <fullName>missing mileage</fullName>
                </value>
                <value>
                    <fullName>no report case note</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>rush rate not marked</fullName>
                </value>
                <value>
                    <fullName>wrong billing code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expedited_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Expedited Activity</description>
        <label>Expedited Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Employer__c</fullName>
        <description>Fax (Employer)</description>
        <label>Fax (Employer)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Treating_Physician__c</fullName>
        <description>Fax (Treating Physician)</description>
        <label>Fax (Treating Physician)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>File_Number_Autonumber__c</fullName>
        <description>File # Autonumber</description>
        <displayFormat>{000000}</displayFormat>
        <label>File # Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GrandTotalExpenses__c</fullName>
        <label>Grand Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrandTotalInvoiced__c</fullName>
        <label>Grand Total Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICD10__c</fullName>
        <inlineHelpText>QA to add if empty</inlineHelpText>
        <label>ICD10 Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ICD9_Code__c</fullName>
        <inlineHelpText>QA to add if empty</inlineHelpText>
        <label>ICD9 Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISYS_File__c</fullName>
        <formula>right( TEXT(YEAR(Referral_Date__c)),2)+&quot;-&quot;+  File_Number_Autonumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISYS File #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Issue__c</fullName>
        <label>IT Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Docking station</fullName>
                </value>
                <value>
                    <fullName>Cellphone</fullName>
                </value>
                <value>
                    <fullName>Broadband</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>Outlook - Send/Add button</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Conga</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat</fullName>
                </value>
                <value>
                    <fullName>QuickBooks</fullName>
                </value>
                <value>
                    <fullName>CMA (Salesforce) other</fullName>
                </value>
                <value>
                    <fullName>Other - Hardware</fullName>
                </value>
                <value>
                    <fullName>Other - Software</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New Hire</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Project/Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Owner__c</fullName>
        <label>IT Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JR</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Priority__c</fullName>
        <label>IT Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Meduim</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Ticket_On_Hold__c</fullName>
        <label>IT Ticket On Hold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Intake__c</fullName>
        <label>Initial Intake</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Report_Submission_Date__c</fullName>
        <label>Initial Report Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceBrokerContactEmail__c</fullName>
        <label>Insurance Broker Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InsuranceBrokerContactTelephone__c</fullName>
        <label>Insurance Broker Contact Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>InsuranceBrokerContact__c</fullName>
        <label>Insurance Broker Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InsuranceBroker__c</fullName>
        <label>Insurance Broker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Assignment_Comments__c</fullName>
        <description>Give detail of Assignment / Task, if provided.</description>
        <inlineHelpText>Give detail of Assignment / Task, if provided.</inlineHelpText>
        <label>Internal Assignment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceMailingInstructions__c</fullName>
        <label>Invoice Mailing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Job Analysis</description>
        <label>Job Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Evaluation_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Job Evaluation Available?</description>
        <label>Job Evaluation Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <description>State where the file is being managed.</description>
        <inlineHelpText>Select the State where the File is being managed.</inlineHelpText>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>California-WC</fullName>
                </value>
                <value>
                    <fullName>Nevada-WC</fullName>
                </value>
                <value>
                    <fullName>New Mexico-WC</fullName>
                </value>
                <value>
                    <fullName>Arizona-WC</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Ergo. Eval.</fullName>
                </value>
                <value>
                    <fullName>LCP</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>EWT</fullName>
                </value>
                <value>
                    <fullName>Seminars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kudos_Detail__c</fullName>
        <label>Kudos Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Labor_Market_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Labor Market Survey</description>
        <label>Labor Market Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Report_Aging__c</fullName>
        <formula>Today() - Date_of_Last_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Report Aging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Report_Review_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Late Report Review</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Late_Reports__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Late_Report_Review__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Late_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Jurisdiction__c</fullName>
        <description>The State where the injury took place.</description>
        <inlineHelpText>Select the State where the injury took place.</inlineHelpText>
        <label>State of Injury</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Oregon</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Care_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Life Care Plans</description>
        <label>Life Care Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Light_Duty_Modified_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Light Duty/Modified Work?</description>
        <label>Light Duty/Modified Work?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Closing_Summary__c</fullName>
        <inlineHelpText>Manager to provide synopsis of incident and send to Human resources.</inlineHelpText>
        <label>Manager Closing Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Records_to_be_Provided_By__c</fullName>
        <description>Medical Records to be Provided By:</description>
        <label>Medical Records to be Provided By:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>U.S. Mail</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MileageBillingsTotalA__c</fullName>
        <label>Mileage Billings Total (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MileageBillingsTotalB__c</fullName>
        <label>Mileage Billings Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MileageTotalA__c</fullName>
        <label>Mileage Total (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MileageTotalB__c</fullName>
        <label>Mileage Total (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MileageTotalCM__c</fullName>
        <label>Mileage Total (CM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_Open__c</fullName>
        <formula>CEILING((CaseClosedDate__c - CaseOpenedDate__c) / 365 * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivation_to_RTW__c</fullName>
        <description>Motivation to RTW</description>
        <label>Motivation to RTW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Money</fullName>
                </value>
                <value>
                    <fullName>Bored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCM_Catastrophic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCM Catastrophic</description>
        <label>NCM - Catastrophic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCM_Long_Term_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCM - Long Term Disability</description>
        <label>NCM - Long Term Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCM_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCM - Onsite</description>
        <label>NCM - Onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCM_Telephonic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCM - Telephonic</description>
        <label>NCM - Telephonic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCMrequestedbyCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the CP requested this NCM specifically.</description>
        <inlineHelpText>Check this box if the CP requested this NCM specifically.</inlineHelpText>
        <label>NCM requested by CP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nature_and_History_of_Injury__c</fullName>
        <description>Nature &amp; History of Injury</description>
        <inlineHelpText>Include mechanism of Injury, date of injury, and initial symptoms.</inlineHelpText>
        <label>Nature &amp; History of Injury</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>